--- a/src/app/App.css
+++ b/src/app/App.css
@@ -23,6 +23,13 @@
   border-radius: 4px;
 }
 
+.detail-section {
+  margin: 10px;
+  padding: 1px 0 10px 0;
+  background-color: #E0E0E0;
+  border-radius: 8px;
+}
+
 .details-container {
   width: 1000px;
   display: flex;
@@ -76,4 +83,18 @@
 
 .token-usd-price {
 
+}
+
+@media only screen and (max-width: 600px) {
+  .details-container {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .details-column {
+    width: 95%;
+    margin-top: 10px;
+    min-height: auto;
+  }
 }
