--- a/src/app/App.css
+++ b/src/app/App.css
@@ -2,6 +2,17 @@
   width: 100vw;
 }
 
+.balance {
+  margin-top: 10px;
+  font-size: large;
+}
+
+.disclaimer {
+  margin: 10px;
+  text-align: center;
+  color: #888;
+}
+
 .header {
   width: 100%;
   display: flex;
